# artifact-cli

./: .gitignore  Cargo.toml  README.md  iii.worker.yaml  package-lock.json  package.json  tsconfig.json
docs/: research-note.md
examples/: digg.payload.json  hackernews.payload.json  linear.payload.json  producthunt.payload.json
src/: lib.rs
tests/: artifact_binary.rs  rust_core.rs  smoke.test.ts
workers/artifact-cli-worker/: worker.json
workers/artifact-cli-worker/src/: generator.ts  planner.ts  types.ts  worker.ts
