[package]
name = "artifact-cli"
version = "0.1.0"
edition = "2021"
description = "Turn APIs, specs, docs, and workflow artifacts into narrowly scoped iii workers."
license = "MIT"
repository = "https://github.com/rohitg00/artifact-cli"

[lib]
name = "artifact_cli"
path = "src/lib.rs"

[[bin]]
name = "artifact-cli-worker"
path = "src/bin/artifact-cli-worker.rs"

[[bin]]
name = "artifact"
path = "src/bin/artifact.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
iii-sdk = "0.11.6"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"
